crates/opentalk-smtp-mailer/tests/snapshots/preview__RegisteredEventUpdate-de-Html.snap
---
source: crates/opentalk-smtp-mailer/tests/preview.rs
expression: example_mail
---
<!DOCTYPE html><html xml:lang="de" lang="de" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" style="margin: 0;padding: 0;font-family: 'OpenTalk', Arial;font-weight: 400;color-scheme: light dark;supported-color-schemes: light dark"><head>
        <!--[if !mso]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
        <meta charset="UTF-8">
        
    </head>
    <body style="margin: 0;padding: 0;font-family: 'OpenTalk', Arial;font-weight: 400;">
        <div class="wrapper" style="background-color: white;padding: 0.5rem;color: #20434F;margin: 1.25rem auto;">
            <div class="header-logo" id="header" style="text-align: center;margin: 3.125rem 0 1.875rem 0;">
                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAM4AAAAtCAYAAADmz1ToAAAABmJLR0QA/wD/AP+gvaeTAAARN0lEQVR42u1dCZgcRRXO4gHeiCIIyRybAGLwixIvDmF2pnc313T3JIwioKAgcikooKIIUQSNeKCgBhHCZfAiAQWTIFeABAEFAiQkgQQCBAgSQgKBBHY3vr+qZren+lVP9ezsZkK6vq++/bKZrqmuqvfe//73Xu2QIf1tudybswXvM+mC+0Pq/8gUvCUZx3uBfr6WLnj/S+e9B+n3V2Ty7jG7FkrvG5K0pG3NLVXwPpwp+OeRgKymvsmyb6R+1fCcOyJZwaRtVS3tlPakw/+nbN57JIbA6P01slJnw1olK5q0N3QbMXbsu9OF0tnZgv8iHfweCAAd/hX9EB70uRg3Wd2kvSFbpr14YLbg3k4H/fFM3n+Ofr6shGe5JgiAbfOpzyb/5l/0817qG2oIzy0kPNsmq9ycbVjeH56sQnwrsy059t+kw31b1vH+Qz8XSeFxnyNr8xKRAN3k58ynn9+Bz8ONMXr00W8hoWvP5L0/0rNdnPCk8/5ZyWo3o8IsHSgVn38O/bOl6SY4efI2pKCPBwFF83wKPvdmh/9DO8s7ZPPuWTShmbAgVcLjuMtowle2FoqfiE0o5L2HOZ8n3VHMJke1eVq2zd2jivhx3OnNhgzoDF4UOkt5/4jNNqHhHd4wOO+YGP28kiY0oyI8JNUXY1H7MzaN8zwjPL9KjmuzII3yjpmCuyy8R8LyNInQ+Efy0N+/2Nqi5vztGzch0vyAXmQZfgzTR2bw9xAeIUCO19kIk63gn6Yp3OdgepNju5nhWS63He3HPOZQLmx1yu9phjkCDRmU76a0459vM8buueL76fOr4IvHRU5hR7Dd3SXruEeTNJ+cdfzToWGE8BS875KfslOjXhyBUMAz/aWzef+TydGN31L7j39vq1NMAQqn2vzRpOz2bXU8h3zHsQS3ywRfPk/7eXSlk1L8trEXvFnMgeym8MMpGEt2r4jxe3v7hN0GVbgd73cmsinteIdYjUHxxMBzILpm1uUfpcbT4re5E8lEH44oP6wCCdHpWKQh5fKbGm5qpUOnv/hXEzGgTW3zPkUW/iBSWMcR/f99wFgFmQku+3crP5GcYW9dP8MBDenIGhk8wsL/qIlkor7eJryRcYpemKDyfl2XeU45xf3TjjseG0YkwBdhebJtE0YNoGP31zBc836RiI3QhvOaQSBsO52VUwdpaVqkn22cy1Qbv4Y+t1J7bmU98cRtWtsn7QYtl3H8XLrdGwfLAyd+gBmRnzIvflkiNkJwZmxJgkPn5tjBWRf34Ih5vGJzZkEehF0Et1yHtfG3R5CLsOpH4GNkO9wDGunPGL9XkA8hKvHqRGyiMXxt2CTiay8oVmwxQggqjDAfjnCw0+euRfaGYayFvZ8reHcFxrlXjl3p3krymz470GuyU0fHO+i7njBaPfLBao0h4okq66Wvu/+sa0IjR5bfmsmVd045k1pHkHM5WCkwNOEpjOb6SyI2QqmQk+4vpYP9b2ws/BtgcFqfyfTvE0nBfQGwmlKg9kFoAPTx0H3Kb4u992XaexYWuvfjoDbXmrhnmhWGf1MtP3yP/dx3ieC9ZqVw7uufFdHAYLoGc7FAGzKLMC0Rm81u2Z7v32FqfFMs7FqD4DwOxWGhqC9kFMRpjT/YnRM/SFrue0iZGRgfR9Tu6BZncnKcB6fBanEZHPBzm22uRDGfa/Jr0vni3jUZ43a/EIZo3uKGZ0Ios7ZAmcG7B4Knp7EfYjTA4eyHk/KDxq69pHRfZYLQx9Q7JqwU4kXIOyRo+Rt0GvMHBCknIs5U77iILYJm5mJLhFom1XpeBUt136g71ebuZ2LuaM4fq9OEu9N1hxNBtUZtnMLW4Y2jpEL8/y7F4tsJRnxDYnyRXQ3e/r7WQmnCYB6w4R2lvRDPAqykg/A3+GDQftBgQ5ox6dFaKZL/pDvXBfcPsa0WkUgIjqvk3yjSAns9DUIQ/zuEAHIkyHGWCnomEyQ9NwK+/kQEfOPWi9FiHMZMdFYjIZugvsPf0QMsKzRXBHuC4JVJs4hUHjrcYIEE30/MXdzNGpkrvxMOOJ+rVdVnD7RPKJikvPclsgR/BsslD7x/E7R6vSSOrhQrZEAccgEWhM7JzwCVYjF+BP1jQTSkf8mqYd0ynmnnDnjHM3N4EHFLztIwhNVtQ/MTdq35RcqsrdIeXt5opo1M+kncC1VgGVPnU82g6AedAqcGc75J3HtgmXlNn/8c8/6bItI7zo1jZZEWk7PQYlJ4vTOovxhBO9+TiwlhDUpxLVny3e39DXc8PfN0/FiPNydOLiKEU9VzaZbRu8DqXdtKoxhUsz7VVhwZ2neRn+dfysFBnInYFDFtzuuNhGgB83td1IIAa9PvbkaKODByVV4bkkErm9jmjcvYVKFi06IUBmlblIPXETd5tOYBIIof7xZghVYrqGfagzG07k9afb+CtlZKQUbMn7X2K9l9E+k/PYb54JDdKy5mAdyRymyu8EXofWyYryo4KWG6vo/X2gif8tGX2JQcQJmp+FQIAVkFdlW26MvVqRTejwYGY4erQpHqE2EJgvz7SlHARHAlYhN17fy6KYVcwI68d4fxchESOrB9wNRMbtjyKFaSnr1EHSgdatyqf16Wpov6kh7rVJe8d1QMZXUBM8bf7VlQNtNDKDJAJ1PUHhq+td39eDyozKbVdNlaRl4J+peybBvmz+07QWS7haV8I+3hpwcCw4N54ZLzsGDc5+FbaZnUC1kqm3A6ElKlifevCR0ypoYIUIeeuZETNBAC0Ea9mok2TVcsBNUuZ4kPKssQEXzTgS/4P2fo0hX8Z73ryOqXEBlnBKdos+bICmESI5+HcNv5Rf6xrEam3DDA+yhGLM7ZUK7CnQZYfHk/5voQCKcgNFOKoIuxai8QxZ2PcaCrKzPhaFcObn0iwptUAcFCk3WnR8QbOmpo3h5AgyADwh0yzs9RDErYJwosHBYcTi0jCOvIimW0TctZMExria37QC/1SWOzVoniDKr+qbJu03StaEvzKstXV36ZUhgbdMWCROAacbpDpQLyLg+8b2TckMZ+wIQYbEIiSBlj5voSbmbSPmPaoztjVSKrMtkq+rByeaCqW3gMdCx8ipqDUepDtnPCKBrT1QNMMNscFImimbW6iZB24LQuQ2Gu07Ex8vMYxmZtpqP4ITlXf7QaZw0HT4K1QzgYSFC1gVlgoyrQjLOMFSoUlqt3DWhOjHa0yrJQc9Od5MW2CpGjc0EyRDwCduq0KmUg9+moKNq/Bot5mYWlyXFkCvnIX+4NcRDLKmA7659RdWstskX3ryg79AQND94QWLj5lnQitOe+gmCQjuEZNO4BGky7moFYy0wTBjVteFHMcSl3A4uqYNSd4BnMgZjKjHmenHvkJl6VyY3bubKQgsiQN5daUrLFveVljozzWvCeQWFYeK4hxqeHY4ciHHq9SnKSndCJMveuWmtZaVC2It7Fv/uCCCbz5ag1i6zQFCysEFTuNqWZSpEeFEEiLUTOX9Q6wACknPGtwo8LCo9uyrHYfb5PkHHwv8UJjMo6nUXjPKzYkNm41Qa/7zXFBH/iBrL4wy2zGUwsDbR16DvClrLFmrlSjqkIfgbSO4SS4JifPqh7O/wufRxa28N4/8e/gctKV4dXq5b1r6l16LHZYJGYxMYnbAsT1fNWVbqqOMxMU1MsSj/w8PUMvlPQt3kkioFEYNzwnesAdVV2N08YUWZDZNoNzRHIgxTdQfBDh+VKe43s7NwhiEdvN1GUyM7lspcFvIMT7FTd6NmttO9cOKQak8bFZp4yBd4QeGK1CLFcJiIBFaQMXLoF3wGsLkqJqaqVLaLj+xJ8PhgEE462TMc3PbNCcf8thirX0EER7KWBZkUGhdrk1xS03ICUGaODTXOlvTlV4fjVzIG5yC5e40/i9gzsa9XnSJkI5rHme7oX9o1d2tPAZD6gK0sQQWGmzt0vohzC+jpm/V2C7oa8S5CUMDLSHfdYEDRQlgLiVwKourMUNOWK9q3SWBGZquIOriAbp1ixWTxT4k40bhzS6BkeH9hfpz6VVp5mnhNjQcxBzUfEggUPJx1qQCiVldBtqoOBpQ4qAo2+RlygWz1PloeEAQxOxBooGvg6hd3XSEHw/6t/ZkdSJOJuAUnDPibvvqOfjr8y7k01QAkR9Dz24BJ5l4F3SljhVmnzELMFwkBlLmxkxr0eChaXw+iWW6U3tQC1cDHA+gvwvDlB5CIEmhQlrdutCLSLuQK6i/sYYH3dMSlZerMty6jRw18JDmb2M6oPNeNztBgPNIJZ0RBBtxwzIDQgHdTlETcq4mC+1fzsauevAKsCmhraCH+FQUbwI3wex9tI63U+B7PA0EnBdV9V6SnrsxKmQaAWmC5xrA4TePcoZbVCCcVC+KS4lCItDq9/BY2/QBxMaeEWKPhCUXf/fmbOi3SWC+9MxWhf4yL1dfT5KmrfZXuPONa4Ah8J0v2Ws+JR9L5dcZ/7S8OccI/5XX3W2cdf2XiSfnePFFK6Do0UKe3xCdnO0qhqH0fjznGAqg+Af7JB024AduWcN3ELqKY9gk6wKQcIJpF5wftguZT1WtKAzV2VjfZxelTvsw60oFVwqeC/AqoVTmOEj3azEB4ZZANh8YzwAxx/uu2dXmTFbpAQRgjBfbA42FQSlruVjwXyZp7S/nMRXMX3QrEQcjA56usxjhA0PgBY15qKy1YqAtCbXR/ZF8GHYOC27XcuUGu6KcLyTa2QOYYg8CbmkkxCVO5SEYgllEF7cCQbr0JmrF7noB9scv4+DSwuC4L888Djm4Jfyj+507RpJpZEEQivmpx7kTEdf0O7BHNChxxXIyk2qgWwKl0RCEcIgxIIr9c6KLZnnYKmLyr/7VnagIuCPpwRZrV5h9D4y7LCD3SXplFKkS+eFOfWIHVlE/D8LYAP0tIKYZqtCJnrRUBY+l0zBXNJ8Sn6XdvQskgleqxOQegRY8rKy6j7vx8HbAPM0uI/E4xXHkNpIV+RSbaUybrCUkfNbaGgxEn7q9t/wntOCj0Yv+klTChbggue876qPyUyrsMXNRElHTOJUFoEZBYb/2ZOlwnTqxjPWiY6fkeAqDhY1fF0GbTLcnGIiK/HwqKuwpAJWyltuEr4DlIgVmf7rMOqXuuAmnraaNLO8wQ0soy2B4iXNhrj66jLr+cuhxFjD0W8Z0qlrEH4MYS9RTk1KQNBVTu4gAKUbGmMHq2HP8LdYRfRNwhsH/DxQKxIthICS9dTifiTf46oaYlQAq1OaX9xmSUxs2C3wKIhoF1LcYg7q8OWEIptpojbBeASrInKJHlW3YcwJfKieAibDL88FRj7rgCCuhUK1uryRREc4gJ9pM1skvMQwZa5XOE6jyDONAU6VZ7ccttERswXMR50sHs2kWlj7Elm+06jdyUL6QMGPkrQdJHwnfKUO0YRdoFtN2/9TYtQLE7JSxGdnYJSaCeWh+IPmTF+JpM7YrtI4SU2SB2ujYb9WSPxvHtis/zVPBmPQ8Irrrr1/YbPCwJEvhhcg2H5YgeCsMGgcwzNKPwYblFXI9oNTYFDCq2JSLbQpLgqV5q+Wn/KY6Wpqk75LTebal4Ge8PqufRiS2nIVhCOO8U3sJ+gkrP5ienk6uH+NDKfpmBRP/tlUdpCFUSxaeq645i0pDVlUyXLcxokMA8FMwd4v0YEsrr7e+t80pK2+Ruwn+T019TJxMyx/KsGLcE8OD1dIq4TnrSkNUWT9e6oxKQIqqEsGYIiqUWqiafCnzj1F6oGxUAk+CcnO5C0Lb7JiH1plEi1p4xnEAOgKPtzL5UoseUFZ3Fd7EbSkrY1NFN2MuIOyeokLWlckzfZdJvqJ5KWtKQZWjiXyV/aj0Bm0pK2lQgO5b4heVHU+MPfqVRVJi1pW0D7PxlAWJX3zI8XAAAAAElFTkSuQmCC" alt="logo">

            </div>

            <div class="meeting-description" id="cta" style="overflow: hidden;text-align: center;background: #F1F3F4;padding: 2.5rem;">
                <h2 style="margin: 0;padding: 0;font-size: 2.063rem;">OpenTalk Meeting was updated - This is a Preview Event</h2>
                <p style="line-height: 1.5;font-weight: 600;">
                Ernest Inviter updated an OpenTalk Meeting. You can view this invite in OpenTalk.
                <br>
                
                <a class="btn" href="https://opentalk.example.org/dashboard/meetings/7dfb7d8d-fb57-49ba-aacc-a76b8d390000" target="_blank" alt="Click to view in dashboard" style="background: #D1E545;-webkit-border-radius: 28;-moz-border-radius: 28;border-radius: 1.75rem;font-weight: 600;color: #193A47;font-size: 0.875rem;padding: 0.625rem 0.938rem;text-decoration: none;margin-top: 1.25rem;display: inline-block;">
        View Invitation
        </a>

                </p>
            </div>

            <div class="details" id="details" style="margin: 2.5rem;text-align: center;line-height: 1.5;">
    <h2 style="padding: 0;font-size: 1.375rem;font-weight: 600;">Meeting Information</h2>
    <p>
        
        <b>Title:</b> This is a Preview Event
        <br>
        <b>Details:</b> This event is a dummy event, and you should have got this invite as a registered user. You can safely ignore this description
        <br>
        
        

        <b>Time:</b> 10.10.2024 15:30-16:10
            <br>
        
        <b>Link to Meeting:</b> <a class="" href="https://opentalk.example.org/room/7dfb7d8d-fb57-49ba-aacc-a76b8d390001" target="_blank" alt="Click to open" style="color: #1573E6;">
        Open the conference room in new tab/window
        </a>

        
    </p>
                    <h2 class="margin-top-40" style="margin-top: 2.5rem;padding: 0;font-size: 1.375rem;font-weight: 600;">Participate via Phone</h2>
                    <p>
                        <b>You can use your phone to participate in this meeting.</b><br>
                        Just dial in the following number and enter the given conference ID and conference PIN, or click the Quick-Dial number on your phone.
                    </p>
                    <div>
                        <b>Number:</b> +49 30 405051330
                    </div>
                    <div>
                        <b>Conference ID:</b> 1234 5678 90
                    </div>
                    <div>
                        <b>Conference PIN:</b> 1234 5678 90
                    </div>

                    
                    

                    
                    
                    <div>
                        <b>Quick-Dial:</b> <a href="tel:+49-30-405051330,,1234567890,,1234567890" style="color: #1573E6;">+4930405051330,,1234567890,,1234567890</a>
                    </div>
                

                    <div class="margin-top-40" style="margin-top: 2.5rem;">
                        <b>Shared Folder:</b> <a href="https://www.example.org/read" style="color: #1573E6;">https://www.example.org/read</a>
                    </div>
                    <div>
                        <b>Folder Password:</b> ReadSecret
                    </div>
                

                    <div class="margin-top-40" style="margin-top: 2.5rem;">
                    This is a public meeting, the links to the livestreams:
                    streaming service 1: https://example.com/4385f873-6077-4d2c-8b46-dbec62029ac6<br>
                    streaming service 2: https://example.com/f544bef8-aa33-475b-8664-fa17c5ca7f83<br>
                    </div>
                

    
</div>

            <div class="footer" id="footer" style="text-align: center;background: #F1F3F4;padding: 2.5rem;line-height: 1.5;">
                <p>
                    If the buttons or links don’t work open your browser and type in the following links:<br>
                    Join Meeting: https://opentalk.example.org/room/7dfb7d8d-fb57-49ba-aacc-a76b8d390001<br>
                    Meeting Details: https://opentalk.example.org/dashboard/meetings/7dfb7d8d-fb57-49ba-aacc-a76b8d390000
                </p>
            </div>
            <div class="quick_guide" style="margin-top: 1rem;padding-left: 2.5rem;padding-right: 2.5rem;line-height: 1.5;">
                                    <div>
                        New to OpenTalk? Read our quick guide here: <a href="https://opentalk.eu/en/quick-manual">https://opentalk.eu/en/quick-manual</a>
                    </div>

            </div>
            <div class="data_protection" style="margin-top: 1rem;padding-left: 2.5rem;padding-right: 2.5rem;line-height: 1.5;">
                                    <div>
                        Note for data protection: The protection of your data is important to us. Personal data can also be exchanged when using the video conference solution. For more information on how we handle your personal data, please visit <a href="https://opentalk.example.org/dataprotection">https://opentalk.example.org/dataprotection</a>.
                    </div>

            </div>
        </div>
    

</body></html>
